--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,12 @@
     			<groupId>org.projectlombok</groupId>
     			<artifactId>lombok</artifactId>
     			<version>${lombok.version}</version>
-    		</dependency>
+    </dependency>
+
+    <dependency>
+        			<groupId>org.apache.commons</groupId>
+        			<artifactId>commons-lang3</artifactId>
+        </dependency>
 </dependencies>
 
 <build>
