--- a/pom.xml
+++ b/pom.xml
@@ -112,9 +112,19 @@
     </dependency>
 
     <dependency>
-        			<groupId>org.apache.commons</groupId>
-        			<artifactId>commons-lang3</artifactId>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
         </dependency>
+    <dependency>
+               <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                 <version>1.9.7</version>
+    </dependency>
+     <dependency>
+                  <groupId>org.aspectj</groupId>
+                  <artifactId>aspectjweaver</artifactId>
+                  <version>1.9.7</version>
+     </dependency>
 </dependencies>
 
 <build>
